--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": ">=15.1.0"
   },
   "dependencies": {
-    "react-bootstrap": "^0.29.4"
+    "jquery": "^2.2.4",
+    "react-bootstrap": "^0.29.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
