--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build",
+    "postinstall": "if [ ! -f lib/index.js ]; then npm run build; fi",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Chung-Yi Chi <chung-yi@artsymail.com>",
@@ -15,6 +16,9 @@
     "react-dom": ">=15.1.0"
   },
   "dependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "jquery": "^2.2.4",
     "react-bootstrap": "^0.29.4",
     "underscore": "^1.8.3"
