--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build",
     "postinstall": "if [ ! -f lib/index.js ]; then npm run build; fi",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "author": "Chung-Yi Chi <chung-yi@artsymail.com>",
   "license": "MIT",
@@ -27,7 +27,12 @@
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "jsdom": "^9.2.1",
+    "mocha": "^2.5.3",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "should": "^9.0.0",
+    "should-sinon": "0.0.5",
+    "sinon": "^1.17.4"
   }
 }
