--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
     "react": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
     "should": "^9.0.0",
     "should-sinon": "0.0.5",
